# cs336-assignment1-basics

./: .gitignore  pyproject.toml
artifacts/: README.md
configs/: batch_size_experiment.yaml  tinystories_small.yaml  tinystories_smoke.yaml
cs336_basics/: checkpointing.py  data_loader.py  decode.py  logging.py  tokenizer.py  train.py
misc/: MA_checkpointing.md  MA_data_loading.md  MA_decoding.md  MA_flash_attention_forward.md  MA_gqa_mqa_attention_cost.md  MA_linear_attention_recurrent.md  MA_transformer_encoder_decoder.md  adamw_wd_eps_betas.md  allreduce_benchmarking.md  allreduce_reducescatter_allgather.md  calculation.md  cross_entropy.md  experiment_log.md  gpu_occupancy_registers.md  learning_rate_schedule.md  matmul_arithmetic_intensity.md  optimizer_state_and_groups.md  plot_rope_theta.py  run_lr_tuning_toy.py  sgd_optimizer.md  softmax-crossentropy-tutorial.html  triton_gelu.md  triton_hard_value.html  zero_dp_memory.md
reports/: activiations.md  batch_size.md  experiment_log.md  ffn.md  learning_rate.md  norm_ablation.md  rope.md  stories.md  tokenization.md  tokenizer_experiments.md  tokenizer_experiments_last_run.txt  tokenizer_metrics.md
scripts/: bpe.py  make_submission.sh  overnight_batch_size_finish.py  overnight_norm_ablation.py  plot_batch_size.py  plot_ffn.py  plot_lr_sweep.py  plot_norm_ablation.py  plot_pos_encoding.py  plot_rope_theta.py  plot_training_curves.py  run_lr_tuning_toy.py  sweep_batch_size.py  sweep_ffn.py  sweep_lr.py  sweep_norm_ablation.py  sweep_pos_encoding.py  sweep_stories.py  tokenizer_experiments.py  tokenizer_metrics.py  watch_batch_size_finish.py  watch_lr_finish.py  (+1 more)
(+16 files in other folders)
